--- a/spread/build.gradle
+++ b/spread/build.gradle
@@ -27,5 +27,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-data-rest')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
+	
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
