--- a/spread/build.gradle
+++ b/spread/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '1.5.6.RELEASE'
+		springBootVersion = '1.4.1.RELEASE'
 	}
 	repositories {
 		mavenCentral()
@@ -12,10 +12,14 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
+apply plugin: 'spring-boot'
 
-version = '0.0.1-SNAPSHOT'
+jar {
+	baseName = 'spread'
+	version = '0.0.1'
+}
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
 	mavenCentral()
@@ -23,11 +27,23 @@ repositories {
 
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-data-elasticsearch')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('org.springframework.boot:spring-boot-starter-data-rest')
+
+	//compile('com.auth0:java-jwt:2.+')
+
 	compile('org.springframework.boot:spring-boot-starter-web')
-	compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
-	
+
+	/*compile('org.springframework.boot:spring-boot-starter-web') {
+		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
+	}*/
+
+	//compile('org.springframework.boot:spring-boot-starter-jetty')
+
+	compile('org.springframework.boot:spring-boot-starter-websocket')
+
+	runtime('org.hsqldb:hsqldb')
+	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
+
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile("org.mockito:mockito-core:1.+")
 }
