--- a/spread/src/main/resources/application.properties
+++ b/spread/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 server.port=8080
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=sa38437890
-#spring.datasource.url=jdbc:mysql://localhost:3306/bd_tcc?useSSL=false
-spring.datasource.url=jdbc:postgresql://localhost:5432/base_tcc
+
+spring.datasource.driver-class-name= com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=SA12345
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.datasource.url=jdbc:postgresql://localhost:5432/base_tcc
 spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/base_tcc?useSSL=false
 #spring.datasource.testWhileIdle = true
 #spring.datasource.validationQuery = SELECT 1
 #spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.hibernate.ddl-auto=update
