--- a/spread/build.gradle
+++ b/spread/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '1.4.1.RELEASE'
+		springBootVersion = '1.5.7.RELEASE'
 	}
 	repositories {
 		mavenCentral()
@@ -12,14 +12,11 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
 
-jar {
-	baseName = 'spread'
-	version = '0.0.1'
-}
+group = 'com.smoreira'
+version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
-targetCompatibility = 1.8
 
 repositories {
 	mavenCentral()
@@ -27,23 +24,33 @@ repositories {
 
 
 dependencies {
+	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-
-	//compile('com.auth0:java-jwt:2.+')
-
+	compile('org.springframework.boot:spring-boot-starter-data-ldap')
+	compile('org.springframework.boot:spring-boot-starter-mail')
+	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+	compile('org.springframework.boot:spring-boot-starter-validation')
 	compile('org.springframework.boot:spring-boot-starter-web')
-
-	/*compile('org.springframework.boot:spring-boot-starter-web') {
-		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
-	}*/
-
-	//compile('org.springframework.boot:spring-boot-starter-jetty')
-
 	compile('org.springframework.boot:spring-boot-starter-websocket')
+	//providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
+	testCompile('org.springframework.boot:spring-boot-starter-test')
 
-	runtime('org.hsqldb:hsqldb')
+	compile(group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310')
+
 	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
 
-	testCompile('org.springframework.boot:spring-boot-starter-test')
-	testCompile("org.mockito:mockito-core:1.+")
+	//compileOnly('org.projectlombok:lombok:1.16.14')
+
+	compile(group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310')
+
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-cache', version: springBootVersion
+	compile group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '2.3.5'
+
+	compile group: 'org.apache.axis', name: 'axis', version: '1.4'
+	compile group: 'javax.xml', name: 'jaxrpc-api', version: '1.1'
+
+	//websocket
+	compile group: 'org.springframework', name: 'spring-messaging', version: '4.2.5.RELEASE'
+	compile group: 'org.springframework', name: 'spring-websocket', version: '4.2.5.RELEASE'
+
 }
